checkall, filter and clear

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -561,16 +561,20 @@ video {
   margin-right: 0.5rem;
 }
 
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
 .mt-0 {
   margin-top: 0px;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
